open_api_app/v0.6.1/README.md
open_api_app
==========
## Change log v0.6.1(2017/01)
*add case of query api_host by Timezone
*add case of query devices logs&on/offline logs
*update case of get shceduler
*add case of get api Geo mode
*add case of put api Geo mode

## Change log v0.6.0(2016/12)
*add case of ECE Apps Download 

v0.5.9

## Change log: v0.5.8(2016/09/05)
*update test case of shceduler when date is empty&repeat is none


v0.5.8

## Change log: v0.5.8(2016/09/05)
* Add test case of create shceduler repeat by day 
* Add test case of Get shceduler by uid
* Add test case of get shceduler log of shceduler repeat day

v0.5.7

## Change log: v0.5.7(2016/08/12)
* Add test case of create shceduler increase enum&bin paramer 
* Add test case of Get shceduler increase enum&bin paramer
* Add test case of Get shceduler Log result increase shceduler_id

v0.5.6

## Change log: v0.5.6(2016/07/26)
* Add test case of create shceduler increase remark field

v0.5.5

## Change log: v0.5.5(2016/07/26)
* Add EU_env test cases

v0.5.4

## Change log: v0.5.4(2016/07/08)
* Add test cases of wechat in API for Apps(User)
* Add test cases of Updating Bindings Info in API for Apps(Devices)

v0.5.3

## Change log: v0.5.3(2016/5)
* bug fix：modified overseas wss/ws port value&m2m port value&&same bug fix

v0.5.2

## Change log: v0.5.2(2016/5)
* update assersion of Bind by Mac/Get Bound Devices/Get Device Info/Device Provision


v0.5.1

## Change log: v0.5.1(2016/5)
* Add new cases: `Sms Code` 
* update return body of Bind by Mac/Get Bound Devices/Get Device Info/Device Provision
* update cese of Create user:the same username/email/phone user register concurrent two or more time


## Change log: v0.5.0(2016/2)
* Add new cases: `Get Latest Scheduler Log` and Scheduler execute`
* add new case: `QQ register`
* add new case: `Bind by mac`

## Change log: v0.4.0(2015/12)
* Update error msg of user registered
* update case of Bind Devices/Unbind/Get Device Info
* update case of Remote Control Device/Set attr val
* add new case: `Phone register fail`
* add new case: `Phone User login`

## Change log: v0.3.0(2015/12)
* Add new cases: `Get Latest Scheduler Log` and Scheduler not execute

## Change log: v0.2.1(2015/12)
* API Structural Adjustment

## Change log: v0.2.0(2015/12)
* Add new cases: `Remote Control Device`
* Add new cases: `Set attr val`
* Add new cases: `Create Scheduler`
* Add new cases: `Get Schedulers`
* Add new cases: `Remove Scheduler`

## Change log: v0.1.0(2015/11)
* Add cases: `Create User`
* Add cases: `Update User Info`
* Add cases: `Get User Info`
* Add cases: `Login`
* Add cases: `Generate AppToken`
* Add cases: `Get captcha Codes`
* Add cases: `Request Password Reset`
* Add cases: `Get Device latest data`
* Add cases: `Get Bound Devices`
* Add cases: `Bind Devices`
* Add cases: `Unbind Devices`
* Add cases: `Get Device Info`
* Add cases: `Query Device`
* First version

